# read_aconity_layers

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  README.rst  devenv.nix  justfile  pyproject.toml  read_layers.pyi  requirements.txt
.github/: dependabot.yml
.github/workflows/: CI.yml  python-package.yaml  python.yaml  rust.yaml  tagging.yml
docs/: conf.py  development.rst  index.rst  installation.rst  justfile  quickstart.rst  readme_bottom.rst  readme_top.rst  requirements.txt
docs/python/: index.rst
docs/rust/: index.rst
src/: lib.rs
src/rust_fn/: mod.rs
tests/: test_read_layers.py
