[package]
name = "read_aconity_layers"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
csv = "*"
glob = "*"
indicatif = "*"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-csv = "*"
numpy = "*"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
rayon = "*"

[dev-dependencies]
anyhow = "1.0.83"
approx = "0.5.1"
arbitrary = { version = "1.3.2", features = ["derive"] }
arbtest = "0.3.1"
flexbuffers = "2.0.0"
float-cmp = "0.9.0"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
serde = "1.0.200"
tar = "0.4.40"
xz = "0.1.0"

[tool.maturin]
profile = "release"
all-features = true
manifest-path = "Cargo.toml"
