[package]
name = "read_aconity_layers"
version = "0.4.1"
edition = "2021"

[lib]
name = "read_aconity_layers"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
csv = "*"
glob = "*"
indicatif = "*"
ndarray = { version = "0.16.1", features = ["rayon"] }
numpy = "0.22.0"
pyo3 = { version = "0.22.5", features = ["abi3-py311", "extension-module"] }
rayon = "*"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.91"
approx = "0.5.1"
arbitrary = { version = "1.3.2", features = ["derive"] }
arbtest = "0.3.1"
flexbuffers = "2.0.0"
float-cmp = "0.10.0"
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
serde = "1.0.200"
tar = "0.4.40"
tempfile = "3.10.1"
xz = "0.1.0"
